objects/AWS_Authentication__mdt.object
<CustomObject>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessKey__c</fullName>
        <label>AccessKey</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BucketName__c</fullName>
        <label>BucketName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Folder__c</fullName>
        <label>File Folder</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecretKey__c</fullName>
        <label>SecretKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AWS Authentication</label>
    <pluralLabel>AWS Authentications</pluralLabel>
</CustomObject>